keycloak/dev/ingressroute-patch-keycloak.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak
spec:
  routes:
    - match: Host(`keycloak.192.168.0.15.xip.io`)
      kind: Rule
      services:
        - name: keycloak-http
          port: 80
      middlewares:
        - name: redirect-https
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak-tls
spec:
  routes:
    - match: Host(`keycloak.192.168.0.15.xip.io`)
      kind: Rule
      services:
        - name: keycloak-http
          port: 80
